--- a/doc/spec/PFA.tex
+++ b/doc/spec/PFA.tex
@@ -109,13 +109,14 @@ It is recommended that PFA files have the extension ``.pfa'' (all lowercase) on 
 
 PFA is a large specification with many modules, so some projects or vendors may wish to implement some but not all of the specification.  However, interoperability is the reason PFA exists; if an implementation does not adhere to the standard, it has limited value.  It is therefore useful to explicitly define what it means for a system to partially implement the standard.
 
-JSON subtrees of a PFA document are interpreted in the following five contexts.
+JSON subtrees of a PFA document are interpreted in the following six contexts.
 \begin{itemize}
 \item Top-level fields are JSON object member name, value pairs in the outermost JSON object of the PFA document.  They have unique member names and describe global aspects of the scoring engine.
 \item Special forms are JSON objects that specify executable expressions and function definitions.  Each is associated with a unique name.
 \item Library functions are strings that specify routines not defined in the PFA document itself.  Each is associated with a unique name that does not conflict with any of the special forms' names.
 \item Avro type schemae are JSON objects and strings that describe data types.  The syntax and meaning of Avro types are specified in \href{http://avro.apache.org/docs/1.7.6/spec.html}{the Avro 1.7.6 specification}.
 \item Embedded data are JSON objects, JSON arrays, numbers, integers, strings, booleans, and nulls that describe data structures.  The syntax and meaning of these objects are also defined by Avro, as the format used by the {\PFAc JSONEncoder} and {\PFAc JSONDecoder}.
+\item Options are JSON object member values of the {\PFAc options} top-level field and may be overridden by the PFA system.  They all have well-defined defaults and unique, hierarchical names.
 \end{itemize}
 
 A system may be partially PFA compliant if it implements some but not all top-level fields, some but not all special forms, or some but not all library functions.  Its coverage may be specified by listing the object member names of the top-level fields that it does implement, the names of the special forms that it does implement, and the names of the library functions that it does implement.  Those top-level fields, special forms, and library functions that it does implement must be completely and correctly implemented.  The coverage is therefore atomic and one can immediately determine if a particular system can execute a particular PFA document by checking the set of names used by the document against the set of names implemented by the system.
@@ -124,9 +125,11 @@ Some special forms and library functions make use of some top-level fields.  For
 
 Avro type schemae and JSON-encoded data should be completely implemented, to the extent defined by the Avro specification.  We suggest that implementations use language-specific Avro libraries as much as possible, rather than implementing Avro-related features in a PFA system.
 
-The PFA standard is defined so that a PFA-compliant system can verify that the JSON types of a PFA document are correctly composed (syntax check), verify that the PFA invariants are maintained and Avro data types are correctly composed (semantic check), and impose additional constraints on the set of top-level fields, special forms, and library functions used (optional checks).  A PFA-compliant system should perform the syntax and semantic checks, including all type inference and type checking, but it is not required.  A PFA document that does not satisfy these invariants and type constraints is not valid and its behavior is not defined by this specification.  The third set of checks, however, is completely optional and different systems may apply different constraints on the kinds of scoring engines they are willing to execute.  For instance, an implementation targeting a limited environment in which recursion is not possible may analyze the document and reject it if any recursive loops are found.
+Options may also be implemented atomically by name.  If a named option is not implemented, the system should behave as though that option had its default value, regardless of whether the option is explicitly set in the PFA document.  Options can in general be overridden by a host system, so if a host system doesn't implement an option, it is as though the system enforces the default.
 
-This specification does not define any standardized subsets of PFA.  As stated above, partial conformance is defined by ad hoc subsets of atomic units.  However, as experience develops, the community may define industry-standard subsets of PFA for specific purposes or special environments.  Conforming to a standardized subset would provide better interoperability than defining ad hoc subsets, and we would recommend such a standard when it exists.  At present, we can only recommend a well-chosen ad hoc subset or complete conformance.
+The PFA standard is defined so that a PFA-compliant system can verify that the JSON types of a PFA document are correctly composed (syntax check), verify that the PFA invariants are maintained and Avro data types are correctly composed (semantic check), and impose additional constraints on the set of top-level fields, special forms, and library functions used (optional checks).  A PFA-compliant system should perform the syntax and semantic checks, including all type inference and type checking, though it is not strictly required.  A PFA document that does not satisfy these invariants and type constraints is not valid and its behavior is not defined by this specification.  The third set of checks, however, is completely optional and different systems may apply different constraints on the kinds of scoring engines they are willing to execute.  For instance, an implementation targeting a limited environment in which recursion is not possible may analyze the document and reject it if any recursive loops are found.
+
+This specification does not define any standardized subsets of PFA.  As stated above, partial conformance is defined by ad hoc subsets of atomic units.  However, as experience develops, the community may define industry-standard subsets of PFA for specific purposes or special environments.  Conforming to a standardized subset would provide better interoperability than defining ad hoc subsets, and we would recommend such a standard when it exists.  At present, we can only recommend a carefully chosen ad hoc subset or complete conformance.
 
 \pagebreak
 
@@ -219,14 +222,16 @@ A cell-specification is a JSON object with the following fields.
 \begin{allowedfields}
 \item[\PFAc type:] {\it (required)} An Avro schema representing the data type of this cell.
 \item[\PFAc init:] {\it (required)} Embedded JSON whose type must match {\PFAc type}.  This is the initial value of the cell (or constant value if it is never modified).
-\item[\PFAc shared:] An optional boolean specifying whether this cell is thread-local to one scoring engine or shared among a battery of similar engines (\hyperlink{hsec:concurrent}{see Sec.~\ref{sec:concurrent}}).  The default is false.
+\item[\PFAc shared:] An optional boolean specifying whether this cell is thread-local to one scoring engine or shared among a battery of similar engines (\hyperlink{hsec:concurrent}{see Sec.~\ref{sec:concurrent}}).  The default is {\PFAc false}.
+\item[\PFAc rollback:] An optional boolean specifying whether this cell should be rolled back to the state it had at the beginning of an {\PFAc action} if an \hyperlink{hsec:exceptions}{exception} occurs during the {\PFAc action}.  The default is {\PFAc false}, and {\PFAc shared} and {\PFAc rollback} are mututally incompatible: they cannot both be {\PFAc true}.
 \end{allowedfields}
 
 A pool-specification is a JSON object with the following fields.
 \begin{allowedfields}
 \item[\PFAc type:] {\it (required)} An Avro schema representing the data type of this pool.
 \item[\PFAc init:] JSON object whose member values are embedded JSON that must match {\PFAc type}.  Unlike a cell, a pool may be empty on initialization, in which case {\PFAc init} is either unspecified or {\PFAc \{\}}.
-\item[\PFAc shared:] An optional boolean specifying whether this pool is thread-local to one scoring engine or shared among a battery of similar engines (\hyperlink{hsec:concurrent}{see Sec.~\ref{sec:concurrent}}).  The default is false.
+\item[\PFAc shared:] An optional boolean specifying whether this pool is thread-local to one scoring engine or shared among a battery of similar engines (\hyperlink{hsec:concurrent}{see Sec.~\ref{sec:concurrent}}).  The default is {\PFAc false}.
+\item[\PFAc rollback:] An optional boolean specifying whether this pool should be rolled back to the state it had at the beginning of an {\PFAc action} if an \hyperlink{hsec:exceptions}{exception} occurs during the {\PFAc action}.  The default is {\PFAc false}, and {\PFAc shared} and {\PFAc rollback} are mututally incompatible: they cannot both be {\PFAc true}.
 \end{allowedfields}
 
 A complete explanation of cells and pools is given in \hyperlink{hsec:state}{Sec.~\ref{sec:state}}.
@@ -326,15 +331,17 @@ Given that the input and output types are described by Avro schemae, the Avro bi
 
 PFA defines two mechanisms to maintain state: cells and pools.  Cells are global variables with a fixed name and type that must be initialized before the scoring engine's run begins.  A cell's value can change to a new value of the same type, but the cell cannot be deleted and new cells cannot be created during the scoring engine's run.  Pools are global namespaces with a fixed type.  New named values can be created within a pool at runtime, as long as they have the correct type, and old values can be deleted at runtime.
 
-A pool of type ``{\PFAtp X}'' would be equivalent to a cell whose type is ``map of {\PFAtp X}'' execpt for performance and concurrency issues.  All special forms and library functions in the PFA specification treat data structures as immutable objects (\hyperlink{hsec:immutable}{see Sec.~\ref{sec:immutable}}), but scoring engines often need to maintain very large maps as caches or for aggregation.  If pools were not available, a PFA implementation would either incur a performance penalty if it maintained a very large map in a cell as an immutable object or if it maintained all temporary variables as mutable objects.  With both cells and pools, a PFA implementation may maintain all values as immutable objects, including cells, and maintain pools as mutable maps of immutable objects.  \hyperlink{hsec:concurrent}{See Sec.~\ref{sec:concurrent}} for a discussion of concurrency issues in cells and pools.
+A pool of type ``{\PFAtp X}'' would be equivalent to a cell whose type is ``map of {\PFAtp X}'' execpt for performance and concurrency issues.  All special forms and library functions in the PFA specification treat data structures as immutable objects (\hyperlink{hsec:immutable}{see Sec.~\ref{sec:immutable}}), but scoring engines often need to maintain very large key-value tables.  If pools were not available, a PFA implementation would either incur a performance penalty if it maintained a large map in a cell as an immutable object or if it maintained all temporary variables as mutable objects.  With both cells and pools, a PFA implementation may maintain all values as immutable objects, including cells, and maintain pools as mutable maps of immutable objects.  \hyperlink{hsec:concurrent}{See Sec.~\ref{sec:concurrent}} for a discussion of concurrency issues in cells and pools.
 
 Cells can only be accessed through the ``cell'' special form and can only be modified through the ``cell-to'' special form.  Pools can only be accessed through the ``pool'' special form and modified through the ``pool-to'' special form (\hyperlink{hsec:cell-pool-forms}{see Sec.~\ref{sec:cell-pool-forms}}).
+
+One common use of persistent state is to represent a complex statistical model, such as a large decision tree.  In most cases, such a model is constant during the scoring engine's run, and this constraint may be enforced through static analysis if the model is stored in a cell.  Another common use is to represent recent or accumulated data in a table, indexed by key.  In most cases, this table is updated frequently and new table entries may be added at any time.  Furthermore, it is often useful to distribute the table-fill operation among a battery of concurrent scoring engines, with different engines modifying different keys at the same time.  These cases are more easily implemented as pools or shared pools.
 
 \hypertarget{hsec:concurrent}{}
 \subsection{Concurrent access to shared state}
 \label{sec:concurrent}
 
-If the {\PFAc shared} member of a cell or pool's specification is {\PFAc true}, the cell or pool is not assumed to be thread-local (\hyperlink{hsec:cells-pools}{see Sec.~\ref{sec:cells-pools}}).  It may be shared among a battery of identical scoring engines in a multi-threaded process, shared among identical scoring engines distributed across a network, shared in a database among different types of processes, or shared among components of an integrated circuit, etc.  In any case, some rules must be followed to avoid simultaneous attempts to modify the data.
+If the {\PFAc shared} member of a cell or pool's specification is {\PFAc true}, the cell or pool is not assumed to be thread-local (\hyperlink{hsec:cells-pools}{see Sec.~\ref{sec:cells-pools}}).  It may be shared among a battery of identical scoring engines in a multi-threaded process, shared among identical scoring engines distributed across a network, shared in a database among different types of processes, or shared among components of an integrated circuit, etc.  In any case, some rules must be followed to avoid simultaneous attempts to modify the data, and these rules must be standardized to ensure that the same scoring engine has the same behavior on different systems.
 
 Shared cells and pools in PFA follow a read-copy-update rule for concurrent access: attempts to read the shared resource (through the ``cell'' or ``pool'' special forms) always succeed without blocking and attempts to write (through the ``cell-to'' or ``pool-to'' special forms) lock the resource or wait until another writer's lock is released.  The writers must operate on a copy of the cell or pool's data (or on immutable data) so that readers can access the old version during the update process.  The new value must be updated atomically at the end of the update process.
 
@@ -346,7 +353,17 @@ The ``cell-to'' and ``pool-to'' special forms accept user-defined update functio
 \subsection{Exceptions}
 \label{sec:exceptions}
 
-all specified by special form and library function documentation; also user exceptions
+As much as is reasonably possible, PFA documents can be statically analyzed to avoid errors at runtime.  However, some error states cannot be predicted without runtime information.  These error states and their exact messages are explicitly defined for each susceptible special form and library function.  If the specified error conditions are met in the {\PFAc begin} routine of a scoring engine, processing stops and should not continue to the {\PFAc action} routine.  If error conditions occur when the {\PFAc action} routine is processing an input datum, processing of that datum stops and may either continue to the next datum or stop the scoring engine entirely.  The PFA host may choose to stop or continue on the basis of the standardized error message.  If error conditions occur in the {\PFAc end} routine, processing stops.
+
+This abrupt end of processing may occur deep in an \hyperlink{hsec:expressions}{expression} or array of \hyperlink{hsec:expressions}{expressions} and behaves like an exception: control flow exits the routine immediately upon encountering the error condition and is either caught by the host system or it halts the process.  In environments where this is difficult to implement, control flow may continue to the end of the routine, but side-effects such as modifications to persistent state and \hyperlink{hsec:logs}{log messages} must be avoided.
+
+If the host system catches an exception in {\PFAc action} and continues to the next datum, and if a cell or pool's {\PFAc rollback} member is {\PFAc true}, then that cell or pool should be reverted to the value that it had at the beginning of the {\PFAc action} (\hyperlink{hsec:cells-pools}{see Sec.~\ref{sec:cells-pools}}).  If the {\PFAc rollback} member is absent or {\PFAc false}, then the cell or pool's value at the start of the next {\PFAc action} should be the value it had at the time of the exception.
+
+In addition to exceptions raised by special forms and library functions, a PFA document can raise custom exceptions with the ``error'' special form (\hyperlink{hsec:exception-form}{see Sec.~\ref{sec:exception-form}}).  The rules described above apply equally to custom exceptions, though we recommend that PFA systems differentiate between built-in exceptions (whose error messages are explicitly defined by this specification) and custom exceptions (whose error messages are free-form).
+
+If a {\PFAc timeout} is defined in the PFA document's {\PFAc options} or is imposed by the PFA system, a {\PFAc begin}, {\PFAc action}, or {\PFAc end} routine that exceeds this timeout raises an exception with the message ``exceeded timeout of $N$ milliseconds'' where $N$ is the relevant timeout.  Timeout exceptions follow the same rules as built-in and custom exceptions.
+
+If possible in a given system, no exceptions other than PFA exceptions should ever be raised while executing a {\PFAc begin}, {\PFAc action}, or {\PFAc end} routine.
 
 \hypertarget{hsec:control}{}
 \subsection{Execution control}
