--- a/doc/spec/PFA.tex
+++ b/doc/spec/PFA.tex
@@ -390,17 +390,85 @@ Every library function that depends on pseudorandom numbers should be seeded by 
 
 Rather than invent a new type system, PFA uses Avro type schemae to describe its data types.  Avro is a serialization format, but it also describes the types (sets of possible values) to be serialized or unserialized with JSON-based schemae.  Feeding Avro-formatted data into and out of a PFA scoring engine is particularly easy, since the sets of possible values that can be Avro serialized perfectly align with the sets of possible values that PFA can use in its calculations.
 
-However, Avro serialization is by no means necessary to use with PFA: data that can be described by Avro types can serialized many different ways.  In fact, the Avro project provides two: a binary format and a JSON format.  With the appropriate translations, CSV can be converted to and from a subset of Avro types, XML can be fully and reversibly transformed, as can many popular data formats.  The transformation of data formats and the internal representation of data in a PFA implementation are beyond the scope of this specification and should be handled in any way that the designer of a PFA system sees fit.
+However, Avro serialization is by no means necessary to use with PFA: data that can be described by Avro types can be serialized many different ways.  In fact, the Avro project provides two: a binary format and a JSON format.  With the appropriate translations, CSV can be converted to and from a subset of Avro types, XML can be fully and reversibly transformed, as can many popular data formats.  The transformation of data formats and the internal representation of data in a PFA implementation are beyond the scope of this specification and should be handled in any way that the designer of a PFA system sees fit.
 
 \hypertarget{hsec:avro-types}{}
 \subsection{Avro types}
 \label{sec:avro-types}
 
-Orderless Avro schema reading (ForwardDeclarationParser)
+The normative definition of Avro 1.7.6 types and type schemae is \href{http://avro.apache.org/docs/1.7.6/spec.html}{provided online}.  However, the basics are duplicated here for convenience.  This section is non-normative.
 
-Type-safe null
+The set of all expressible types is the closure under the following primitives and parameterized types.
+\begin{allowedfields}
+\item[null:] A type with only one value, {\PFAc null}.  This is a type-safe null in the sense that no other types are nullable unless specifically declared to be a union with type {\bf null}.
+\item[boolean:] A type with only two values, {\PFAc true} and {\PFAc false}.
+\item[int:] Signed whole numbers with a 32-bit range: from $-2147483648$ to $2147483647$ inclusive.
+\item[long:] Signed whole numbers with a 64-bit range: from $-9223372036854775808$ to $9223372036854775807$.
+\item[float:] Signed fractional numbers with 32-bit binary precision as defined by \href{http://dx.doi.org/10.1109%2FIEEESTD.2008.4610935}{IEEE 754}.
+\item[double:] Signed fractional numbers with 64-bit binary precision according to the same standard.
+\item[string:] Strings of text characters that can be encoded in \href{http://www.unicode.org/standard/standard.html}{Unicode}.
+\item[bytes:] Arrays of uninterpreted bytes with any length.
+\item[fixed({\PFAtp L}):] Named arrays of uninterpreted bytes with length {\PFAtp L} (integer).
+\item[enum({\PFAtp S}):] Named enumeration of a finite set of symbols {\PFAtp S} (ordered list of strings).
+\item[array({\PFAtp X}):] Homogeneous array of type {\PFAtp X} (Avro type) with any length.
+\item[map({\PFAtp X}):] Homogeneous map from strings to type {\PFAtp X} (Avro type).  The keys of all maps must be strings (just like JSON).
+\item[record({\PFAtp F}):] Heterogeneous record of fields {\PFAtp F} (named slots with Avro types).  This is a product type, since the possible values that a record can have is the Cartesian product of the possible values that each field can have.
+\item[union({\PFAtp T}):] Union of types {\PFAtp T}.  This is a sum type, since the possible values that a union can have is sum of types {\PFAtp T}.
+\end{allowedfields}
 
-Limitations: (1) String-only map keys, (2) No ``set'' object (use array's set-like functions or a map from string values to nulls), (3) No circular references (make a map of string-valued keys: acts as a weak reference)
+\noindent\begin{minipage}{\linewidth}
+\indent This type system has the following limitations and remediations.
+\begin{itemize}
+\item Arrays and maps must be homogeneous (all elements have the same, specified type).  This is sufficient for most mathematical applications and the restriction helps to eliminate common mistakes.  Also, it makes some significant optimizations possible that are difficult or impossible in dynamic languages.
+\end{itemize}
+\end{minipage}
+
+\vspace{-0.15 cm}
+\begin{itemize}
+\item Map keys must be strings.  If an application must represent a map whose keys are not strings, one can define a unique string representation for each key and look up items by first transforming to the string representation.
+
+\item There is no set or multiset type.  This can be emulated with arrays and PFA's \hyperlink{hsec:set-like}{set-like functions} or a map from string-valued keys to {\PFAc null}.
+
+\item Circular references are not possible, as there are no pointers or references.  However, data structures with conceptual loops can be emulated through weak references in a map.  For example, an arbitrary directed graph can be described as a map of arrays of strings: each key is a node and each element of an array is a link to another node.  These references are weak because there is no guarantee that a key exists for every array element.
+
+The lack of circular references is, in some ways, an advantage.  Non-circular data can be more easily serialized without the possibility of infinite loops.  Immutable data can take advantage of more structural sharing since data structures are purely tree-like.
+
+Note that recursively defined types {\it are} possible.  A record {\PFAtp X} could have one or more fields that are unions of {\PFAtp X} and {\PFAtp Y}, or it could have a field that is an array or map of {\PFAtp X}.  The first case would describe a tree of nodes {\PFAtp X} with a fixed number of named branches, terminating in leaves of type {\PFAtp Y}.  (This is how decision trees are described in PFA; the scores have type {\PFAtp Y}.)  The second case would describe a tree of nodes {\PFAtp X} with arbitrarily many branches at each node, terminating in empty arrays or maps.
+
+\item To make a type such as {\bf string} nullable, one must construct a union of {\bf string} and {\bf null}.  This union type cannot be passed into functions that expect a {\bf string}.
+
+Again, this restriction can be an advantage.  It is often known as a type-safe null: in the example above, string functions can still be used, but only after explicitly handling the {\bf null} case.  In PFA, one would use a \hyperlink{hsec:casting}{cast-cases} special form to split the program flow into a branch that handles the {\bf string} case and a branch that handles the {\bf null} case, usually by specifying a rule that replaces {\PFAc null} with a string.  This restriction eliminates the possibility of null pointer exceptions at runtime.
+
+Most library functions in PFA interpret {\PFAc null} as a missing value.  Missing value handling is an important consideration in many statistical analyses, so PFA has a \hyperlink{hsec:impute}{suite of functions} for addressing this case.
+\end{itemize}
+
+The advantages of this type system are that (a) it aligns well with types already used by major data pipeline tools (binary Avro and, with some transformation, Thrift and Protocol Buffers), (b) it is easy to represent as JSON or XML (the lack of circular references is particularly helpful), (c) any type is nullable, including primitives, (d) Avro's rules for schema resolution can be reinterpreted as type promotion for type inference (\hyperlink{hsec:type-inference}{see Sec.~\ref{sec:type-inference}}), (e) all types have a strict ordering (see \href{http://avro.apache.org/docs/1.7.6/spec.html#order}{Avro sort order specification}), and (f) the type schemae are JSON objects and strings, which fit seamlessly into a PFA document.
+
+\subsection{Type schemae in the PFA document}
+
+An Avro type schema can be a JSON object or a string.  JSON objects construct parameterized types, while strings specify type primitives or reference previously defined types.  Some PFA top-level fields and member values of special forms must be Avro schemae: these schema are simply included inline with the JSON representing the rest of the PFA document.
+
+Below is a summary of the schema syntax that is relevant for PFA.  All \hyperlink{http://avro.apache.org/docs/1.7.6/spec.html}{Avro schema elements} must be accepted by a PFA reader, but these are the only ones that influence PFA.
+
+The following strings are type primatives: ``null'', ``boolean'', ``int'', ``long'', ``float'', ``double'', ``string'', ``bytes''.  Other strings are either previously defined named types or they are invalid.  The form {\PFAc \{"type":$\!$ "X"\}} for string {\PFAtp X} is equivalent to the string on its own.
+
+A byte array with name {\PFAtp N} and fixed length {\PFAtp L} is specified by the form {\PFAc \{"type":$\!$ "fixed", "name":$\!$ "N", "namespace":$\!$ "NS", "size":$\!$ L\}}.  The namespace is optional, but the name is not.  The length {\PFAtp L} must be a JSON integer.  Avro fixed types have additional object members, but they are not relevant for PFA.
+
+An enumeration with name {\PFAtp N} and symbols {\PFAtp S} is specified by the form {\PFAc \{"type":$\!$ "enum", "name":$\!$ "N", "namespace":$\!$ "NS", "symbols":$\!$ S\}}.  The namespace is optional, but the name is not.  The symbols {\PFAtp S} must be a JSON array of strings.  Avro enumeration types have additional object members, but they are not relevant for PFA.
+
+An array with elements of type {\PFAtp X} is specified by the form {\PFAc \{"type": "array", "items": X\}}.  An array does not accept a name or any other member values.
+
+An map with values of type {\PFAtp X} is specified by the form {\PFAc \{"type": "map", "values": X\}}.  A map does not accept a name or any other member values.
+
+A record with name {\PFAtp N} and fields {\PFAtp F} is specified by the form {\PFAc \{"type":$\!$ "record", "name":$\!$ "N", "namespace":$\!$ "NS", "fields":$\!$ F\}}.  The namespace is optional, but the name is not.  The fields {\PFAtp F} must be JSON objects with the following form: {\PFAc \{"name": "FN", "type": "FT", "default": D, "order": O\}} where {\PFAc name} and {\PFAc type} are required and {\PFAc default} and {\PFAc order} are not.  The default {\PFAtp D} is encoded in the Avro-JSON format and provides a default value if the input data stream is missing one.  The order {\PFAc O} is one of these strings: ``ascending'', ``descending'', and ``ignore'', and it defines the sort order for the record.  Avro record types and field types have additional object members, but they are not relevant for PFA.
+
+A union of types {\PFAtp T1} \ldots {\PFAtp TN} is specified by a JSON array form {\PFAc [T \ldots\ TN]}.
+
+If the Avro implementation used by a PFA system supports \href{http://avro.apache.org/docs/1.7.6/spec.html#Aliases}{aliases} for schema resolution, the aliases should be used for type inference (\hyperlink{hsec:type-inference}{see Sec.~\ref{sec:type-inference}}).  Aliases only apply to named types and record fields.
+
+Avro schema parsing is usually implemented as a stateful process, in which the parser remembers previously named types and recognizes its namespace-qualified name in a JSON string as representing the type.  This is especially important for recursively defined types.  A PFA document may have many type schemae embedded within it, often as member values of JSON objects.  Systems that load JSON objects into hash-tables cannot guarantee that the order of JSON object members is preserved, which could cause schemae to be read in any order.
+
+Therefore, PFA implementations must pass Avro schemae to be parsed in an order that resolves dependencies or PFA implementations must parse the schemae themselves in an order that resolves dependencies.  PFA documents must define named types (as a JSON object) exactly once and reference them (as a string) elsewhere.
 
 \hypertarget{hsec:type-inference}{}
 \subsection{Type inference}
@@ -584,90 +652,90 @@ Special forms and ordinary function calls
 \subsection{Basic arithmetic}
 
 \subsubsection{Addition of two values ($+$)}
-% \libfcn{+}
+\libfcn{+}
 
 \subsubsection{Subtraction ($-$)}
-% \libfcn{-}
+\libfcn{-}
 
 \subsubsection{Multiplication of two values (*)}
-% \libfcn{*}
+\libfcn{*}
 
 \subsubsection{Floating-point division (/)}
-% \libfcn{/}
+\libfcn{/}
 
 \subsubsection{Integer division (//)}
-% \libfcn{//}
+\libfcn{//}
 
 \subsubsection{Negation (u$-$)}
-% \libfcn{u-}
+\libfcn{u-}
 
 \subsubsection{Modulo (\%)}
-% \libfcn{\%}
+\libfcn{\%}
 
 \subsubsection{Remainder (\%\%)}
-% \libfcn{\%\%}
+\libfcn{\%\%}
 
 \subsubsection{Raising to a power (**)}
-% \libfcn{**}
+\libfcn{**}
 
 \subsection{Comparison operators}
 
 Avro defines a \href{http://avro.apache.org/docs/1.7.6/spec.html#order}{sort order} for every pair of values with a compatible type, so any two objects of compatible type can be compared in PFA.
 
 \subsubsection{General comparision (cmp)}
-% \libfcn{cmp}
+\libfcn{cmp}
 
 \subsubsection{Equality (==)}
-% \libfcn{==}
+\libfcn{==}
 
 \subsubsection{Inequality (!=)}
-% \libfcn{!=}
+\libfcn{!=}
 
 \subsubsection{Less than (<)}
-% \libfcn{<}
+\libfcn{<}
 
 \subsubsection{Less than or equal to (<=)}
-% \libfcn{<=}
+\libfcn{<=}
 
 \subsubsection{Greater than (>)}
-% \libfcn{>}
+\libfcn{>}
 
 \subsubsection{Greater than or equal to (>=)}
-% \libfcn{>=}
+\libfcn{>=}
 
 \subsubsection{Maximum of two values (max)}
-% \libfcn{max}
+\libfcn{max}
 
 \subsubsection{Minimum of two values (min)}
-% \libfcn{min}
+\libfcn{min}
 
 \subsection{Logical operators}
 
 \subsubsection{Logical and (and)}
-% \libfcn{and}
+\libfcn{and}
 
 \subsubsection{Logical or (or)}
-% \libfcn{or}
+\libfcn{or}
 
 \subsubsection{Logical xor (xor)}
-% \libfcn{xor}
+\libfcn{xor}
 
 \subsubsection{Logical not (not)}
-% \libfcn{not}
+\libfcn{not}
 
 \subsection{Bitwise arithmetic}
 
 \subsubsection{Bitwise and (\&)}
-% \libfcn{\&}
+\libfcn{\&}
 
 \subsubsection{Bitwise or (|)}
-% \libfcn{|}
+\libfcn{|}
 
 \subsubsection{Bitwise xor (\^{})}
-% \libfcn{\^{}}
+\libfcn{\^{}}
 
 \subsubsection{Bitwise not (\textasciitilde{})}
-% \libfcn{TILDE}
+\libfcn{TILDE}
 
 \pagebreak
 
@@ -678,89 +746,89 @@ Avro defines a \href{http://avro.apache.org/docs/1.7.6/spec.html#order}{sort ord
 Constants such as $\pi$ and $e$ are represented as stateless functions with no arguments.  Specific implementations may choose to replace the function call with its inline value.
 
 \subsubsection{Archimedes' constant $\pi$ (m.pi)}
-% \libfcn{m.pi}
+\libfcn{m.pi}
 
 \subsubsection{Euler's constant $e$ (m.e)}
-% \libfcn{m.e}
+\libfcn{m.e}
 
 \subsection{Common functions}
 
 \subsubsection{Square root (m.sqrt)}
-% \libfcn{m.sqrt}
+\libfcn{m.sqrt}
 
 \subsubsection{Hypotnuse (m.hypot)}
-% \libfcn{m.hypot}
+\libfcn{m.hypot}
 
 \subsubsection{Trigonometric sine (m.sin)}
-% \libfcn{m.sin}
+\libfcn{m.sin}
 
 \subsubsection{Trigonometric cosine (m.cos)}
-% \libfcn{m.cos}
+\libfcn{m.cos}
 
 \subsubsection{Trigonometric tangent (m.tan)}
-% \libfcn{m.tan}
+\libfcn{m.tan}
 
 \subsubsection{Inverse trigonometric sine (m.asin)}
-% \libfcn{m.asin}
+\libfcn{m.asin}
 
 \subsubsection{Inverse trigonometric cosine (m.acos)}
-% \libfcn{m.acos}
+\libfcn{m.acos}
 
 \subsubsection{Inverse trigonometric tangent (m.atan)}
-% \libfcn{m.atan}
+\libfcn{m.atan}
 
 \subsubsection{Robust inverse trigonometric tangent (m.atan2)}
-% \libfcn{m.atan2}
+\libfcn{m.atan2}
 
 \subsubsection{Hyperbolic sine (m.sinh)}
-% \libfcn{m.sinh}
+\libfcn{m.sinh}
 
 \subsubsection{Hyperbolic cosine (m.cosh)}
-% \libfcn{m.cosh}
+\libfcn{m.cosh}
 
 \subsubsection{Hyperbolic tangent (m.tanh)}
-% \libfcn{m.tanh}
+\libfcn{m.tanh}
 
 \subsubsection{Natural exponential (m.exp)}
-% \libfcn{m.exp}
+\libfcn{m.exp}
 
 \subsubsection{Natural exponential minus one (m.expm1)}
-% \libfcn{m.expm1}
+\libfcn{m.expm1}
 
 \subsubsection{Natural logarithm (m.ln)}
-% \libfcn{m.ln}
+\libfcn{m.ln}
 
 \subsubsection{Logarithm base 10 (m.log10)}
-% \libfcn{m.log10}
+\libfcn{m.log10}
 
 \subsubsection{Arbitrary logarithm (m.log)}
-% \libfcn{m.log}
+\libfcn{m.log}
 
 \subsubsection{Natural logarithm of one plus square (m.ln1p)}
-% \libfcn{m.ln1p}
+\libfcn{m.ln1p}
 
 \subsection{Rounding}
 
 \subsubsection{Absolute value (m.abs)}
-% \libfcn{m.abs}
+\libfcn{m.abs}
 
 \subsubsection{Floor (m.floor)}
-% \libfcn{m.floor}
+\libfcn{m.floor}
 
 \subsubsection{Ceiling (m.ceil)}
-% \libfcn{m.ceil}
+\libfcn{m.ceil}
 
 \subsubsection{Simple rounding (m.round)}
-% \libfcn{m.round}
+\libfcn{m.round}
 
 \subsubsection{Unbiased rounding (m.rint)}
-% \libfcn{m.rint}
+\libfcn{m.rint}
 
 \subsubsection{Threshold function (m.signum)}
-% \libfcn{m.signum}
+\libfcn{m.signum}
 
 \subsubsection{Copy sign (m.copysign)}
-% \libfcn{m.copysign}
+\libfcn{m.copysign}
 
 \subsection{Linear algebra}
 
@@ -775,76 +843,76 @@ Strings are immutable, so none of the following functions modifies a string in-p
 \subsection{Basic access}
 
 \subsubsection{Length (s.len)}
-% \libfcn{s.len}
+\libfcn{s.len}
 
 \subsubsection{Extract substring (s.substr)}
-% \libfcn{s.substr}
+\libfcn{s.substr}
 
 \subsubsection{Modify substring (s.substrto)}
-% \libfcn{s.substrto}
+\libfcn{s.substrto}
 
 \subsection{Search and replace}
 
 \subsubsection{Contains (s.contains)}
-% \libfcn{s.contains}
+\libfcn{s.contains}
 
 \subsubsection{Count instances (s.count)}
-% \libfcn{s.count}
+\libfcn{s.count}
 
 \subsubsection{Find first index (s.index)}
-% \libfcn{s.index}
+\libfcn{s.index}
 
 \subsubsection{Find last index (s.rindex)}
-% \libfcn{s.rindex}
+\libfcn{s.rindex}
 
 \subsubsection{Check start (s.startswith)}
-% \libfcn{s.startswith}
+\libfcn{s.startswith}
 
 \subsubsection{Check end (s.endswith)}
-% \libfcn{s.endswith}
+\libfcn{s.endswith}
 
 \subsection{Conversions to or from other types}
 
 \subsubsection{Join an array of strings (s.join)}
-% \libfcn{s.join}
+\libfcn{s.join}
 
 \subsubsection{Split into an array of strings (s.split)}
-% \libfcn{s.split}
+\libfcn{s.split}
 
 \subsection{Conversions to or from other strings}
 
 \subsubsection{Concatenate two strings (s.concat)}
-% \libfcn{s.concat}
+\libfcn{s.concat}
 
 \subsubsection{Repeat pattern (s.repeat)}
-% \libfcn{s.repeat}
+\libfcn{s.repeat}
 
 \subsubsection{Lowercase (s.lower)}
-% \libfcn{s.lower}
+\libfcn{s.lower}
 
 \subsubsection{Uppercase (s.upper)}
-% \libfcn{s.upper}
+\libfcn{s.upper}
 
 \subsubsection{Left-strip (s.lstrip)}
-% \libfcn{s.lstrip}
+\libfcn{s.lstrip}
 
 \subsubsection{Right-strip (s.rstrip)}
-% \libfcn{s.rstrip}
+\libfcn{s.rstrip}
 
 \subsubsection{Strip both ends (s.strip)}
-% \libfcn{s.strip}
+\libfcn{s.strip}
 
 \subsubsection{Replace all matches (s.replaceall)}
-% \libfcn{s.replaceall}
+\libfcn{s.replaceall}
 
 \subsubsection{Replace first match (s.replacefirst)}
-% \libfcn{s.replacefirst}
+\libfcn{s.replacefirst}
 
 \subsubsection{Replace last match (s.replacelast)}
-% \libfcn{s.replacelast}
+\libfcn{s.replacelast}
 
 \subsubsection{Translate characters (s.translate)}
-% \libfcn{s.translate}
+\libfcn{s.translate}
 
 \subsection{Regular Expressions}
 
@@ -857,228 +925,230 @@ and stemming
 \subsection{Basic access}
 
 \subsubsection{Length (a.len)}
-% \libfcn{a.len}
+\libfcn{a.len}
 
 \subsubsection{Extract subsequence (a.subseq)}
-% \libfcn{a.subseq}
+\libfcn{a.subseq}
 
 \subsubsection{Modify subsequence (a.subseqto)}
-% \libfcn{a.subseqto}
+\libfcn{a.subseqto}
 
 \subsection{Search and replace}
 
 \subsubsection{Contains (a.contains)}
-% \libfcn{a.contains}
+\libfcn{a.contains}
 
 \subsubsection{Count instances (a.count)}
-% \libfcn{a.count}
+\libfcn{a.count}
 
 \subsubsection{Count instances by predicate (a.countPredicate)}
 libfcn{a.countPredicate}
 
 \subsubsection{Find first index (a.index)}
-% \libfcn{a.index}
+\libfcn{a.index}
 
 \subsubsection{Find last index (a.rindex)}
-% \libfcn{a.rindex}
+\libfcn{a.rindex}
 
 \subsubsection{Check start (a.startswith)}
-% \libfcn{a.startswith}
+\libfcn{a.startswith}
 
 \subsubsection{Check end (a.endswith)}
-% \libfcn{a.endswith}
+\libfcn{a.endswith}
 
 \subsection{Manipulation}
 
 \subsubsection{Concatenate two arrays (a.concat)}
-% \libfcn{a.concat}
+\libfcn{a.concat}
 
 \subsubsection{Append (a.append)}
-% \libfcn{a.append}
+\libfcn{a.append}
 
 \subsubsection{Insert or prepend (a.insert)}
-% \libfcn{a.insert}
+\libfcn{a.insert}
 
 \subsubsection{Replace item (a.replace)}
-% \libfcn{a.replace}
+\libfcn{a.replace}
 
 \subsubsection{Remove item (a.remove)}
-% \libfcn{a.remove}
+\libfcn{a.remove}
 
 \subsection{Reordering}
 
 \subsubsection{Sort (a.sort)}
-% \libfcn{a.sort}
+\libfcn{a.sort}
 
 \subsubsection{Sort with a less-than function (a.sortLT)}
-% \libfcn{a.sortLT}
+\libfcn{a.sortLT}
 
 \subsubsection{Randomly shuffle array (a.shuffle)}
-% \libfcn{a.shuffle}
+\libfcn{a.shuffle}
 
 \subsubsection{Reverse order (a.reverse)}
-% \libfcn{a.reverse}
+\libfcn{a.reverse}
 
 \subsection{Extreme values}
 
 \subsubsection{Maximum of all values (a.max)}
-% \libfcn{a.max}
+\libfcn{a.max}
 
 \subsubsection{Minimum of all values (a.min)}
-% \libfcn{a.min}
+\libfcn{a.min}
 
 \subsubsection{Maximum with a less-than function (a.maxLT)}
-% \libfcn{a.maxLT}
+\libfcn{a.maxLT}
 
 \subsubsection{Minimum with a less-than function (a.minLT)}
-% \libfcn{a.minLT}
+\libfcn{a.minLT}
 
 \subsubsection{Maximum $N$ items (a.maxN)}
-% \libfcn{a.maxN}
+\libfcn{a.maxN}
 
 \subsubsection{Minimum $N$ items (a.minN)}
-% \libfcn{a.minN}
+\libfcn{a.minN}
 
 \subsubsection{Maximum $N$ with a less-than function (a.maxNLT)}
-% \libfcn{a.maxNLT}
+\libfcn{a.maxNLT}
 
 \subsubsection{Minimum $N$ with a less-than function (a.minNLT)}
-% \libfcn{a.minNLT}
+\libfcn{a.minNLT}
 
 \subsubsection{Argument maximum (a.argmax)}
-% \libfcn{a.argmax}
+\libfcn{a.argmax}
 
 \subsubsection{Argument minimum (a.argmin)}
-% \libfcn{a.argmin}
+\libfcn{a.argmin}
 
 \subsubsection{Argument maximum with a less-than function (a.argmaxLT)}
-% \libfcn{a.argmaxLT}
+\libfcn{a.argmaxLT}
 
 \subsubsection{Argument minimum with a less-than function (a.argminLT)}
-% \libfcn{a.argminLT}
+\libfcn{a.argminLT}
 
 \subsubsection{Maximum $N$ arguments (a.argmaxN)}
-% \libfcn{a.argmaxN}
+\libfcn{a.argmaxN}
 
 \subsubsection{Minimum $N$ arguments (a.argminN)}
-% \libfcn{a.argminN}
+\libfcn{a.argminN}
 
 \subsubsection{Maximum $N$ arguments with a less-than function (a.argmaxNLT)}
-% \libfcn{a.argmaxNLT}
+\libfcn{a.argmaxNLT}
 
 \subsubsection{Minimum $N$ arguments with a less-than function (a.argminNLT)}
-% \libfcn{a.argminNLT}
+\libfcn{a.argminNLT}
 
 \subsection{Numerical combinations}
 
 \subsubsection{Add all array values (a.sum)}
-% \libfcn{a.sum}
+\libfcn{a.sum}
 
 \subsubsection{Multiply all array values (a.product)}
-% \libfcn{a.product}
+\libfcn{a.product}
 
 \subsubsection{Sum of logarithms (a.lnsum)}
-% \libfcn{a.lnsum}
+\libfcn{a.lnsum}
 
 \subsubsection{Arithmetic mean (a.mean)}
-% \libfcn{a.mean}
+\libfcn{a.mean}
 
 \subsubsection{Geometric mean (a.geomean)}
-% \libfcn{a.geomean}
+\libfcn{a.geomean}
 
 \subsubsection{Median (a.median)}
-% \libfcn{a.median}
+\libfcn{a.median}
 
 \subsubsection{Mode, or most common value (a.mode)}
-% \libfcn{a.mode}
+\libfcn{a.mode}
 
+\hypertarget{hsec:set-like}{}
 \subsection{Set or set-like functions}
+\label{sec:set-like}
 
 PFA does not have a set datatype, but arrays can be interpreted as sets with the following functions.
 
 \subsubsection{Distinct items (a.distinct)}
-% \libfcn{a.distinct}
+\libfcn{a.distinct}
 
 \subsubsection{Set equality (a.seteq)}
-% \libfcn{a.seteq}
+\libfcn{a.seteq}
 
 \subsubsection{Union (a.union)}
-% \libfcn{a.union}
+\libfcn{a.union}
 
 \subsubsection{Intersection (a.intersect)}
-% \libfcn{a.intersect}
+\libfcn{a.intersect}
 
 \subsubsection{Set difference (a.diff)}
-% \libfcn{a.diff}
+\libfcn{a.diff}
 
 \subsubsection{Symmetric set difference (a.symdiff)}
-% \libfcn{a.symdiff}
+\libfcn{a.symdiff}
 
 \subsubsection{Subset check (a.subset)}
-% \libfcn{a.subset}
+\libfcn{a.subset}
 
 \subsubsection{Disjointness check (a.disjoint)}
-% \libfcn{a.disjoint}
+\libfcn{a.disjoint}
 
 \subsection{Functional programming}
 
 \subsubsection{Map array items with function (a.map)}
-% \libfcn{a.map}
+\libfcn{a.map}
 
 \subsubsection{Filter array items with function (a.filter)}
-% \libfcn{a.filter}
+\libfcn{a.filter}
 
 \subsubsection{Filter and map (a.filtermap)}
-% \libfcn{a.filtermap}
+\libfcn{a.filtermap}
 
 \subsubsection{Map and flatten (a.flatmap)}
-% \libfcn{a.flatmap}
+\libfcn{a.flatmap}
 
 \subsubsection{Reduce array items to a single value (a.reduce)}
-% \libfcn{a.reduce}
+\libfcn{a.reduce}
 
 \subsubsection{Right-to-left reduce (a.reduceright)}
-% \libfcn{a.reduceright}
+\libfcn{a.reduceright}
 
 \subsubsection{Fold array items to another type (a.fold)}
-% \libfcn{a.fold}
+\libfcn{a.fold}
 
 \subsubsection{Right-to-left fold (a.foldright)}
-% \libfcn{a.foldright}
+\libfcn{a.foldright}
 
 \subsubsection{Take items until predicate is false (a.takeWhile)}
-% \libfcn{a.takeWhile}
+\libfcn{a.takeWhile}
 
 \subsubsection{Drop items until predicate is true (a.dropWhile)}
-% \libfcn{a.dropWhile}
+\libfcn{a.dropWhile}
 
 \subsection{Functional tests}
 
 \subsubsection{Existential check, $\exists$ (a.any)}
-% \libfcn{a.any}
+\libfcn{a.any}
 
 \subsubsection{Univeral check, $\forall$ (a.all)}
-% \libfcn{a.all}
+\libfcn{a.all}
 
 \subsubsection{Pairwise check of two arrays (a.corresponds)}
-% \libfcn{a.corresponds}
+\libfcn{a.corresponds}
 
 \subsection{Restructuring}
 
 \subsubsection{Sliding window (a.slidingWindow)}
-% \libfcn{a.slidingWindow}
+\libfcn{a.slidingWindow}
 
 \subsubsection{Unique combinations of a fixed size (a.combinations)}
-% \libfcn{a.combinations}
+\libfcn{a.combinations}
 
 \subsubsection{Permutations (a.permutations)}
-% \libfcn{a.permutations}
+\libfcn{a.permutations}
 
 \subsubsection{Flatten array (a.flatten)}
-% \libfcn{a.flatten}
+\libfcn{a.flatten}
 
 \subsubsection{Group items by category (a.groupby)}
-% \libfcn{a.groupby}
+\libfcn{a.groupby}
 
 \pagebreak
 
@@ -1096,13 +1166,15 @@ PFA does not have a set datatype, but arrays can be interpreted as sets with the
 
 \section{Missing data handling}
 
+\hypertarget{hsec:impute}{}
 \subsection{Impute library}
+\label{sec:impute}
 
 \subsubsection{Skip record (impute.errorOnNull)}
-% \libfcn{impute.errorOnNull}
+\libfcn{impute.errorOnNull}
 
 \subsubsection{Replace with default (impute.defaultOnNull)}
-% \libfcn{impute.defaultOnNull}
+\libfcn{impute.defaultOnNull}
 
 \pagebreak
 
@@ -1121,10 +1193,10 @@ CUSUM
 \subsection{Sample statistics}
 
 \subsubsection{Update aggregated mean (stat.sample.updateMean)}
-% \libfcn{stat.sample.updateMean}
+\libfcn{stat.sample.updateMean}
 
 \subsubsection{Compute aggregated mean (stat.sample.mean)}
-% \libfcn{stat.sample.mean}
+\libfcn{stat.sample.mean}
 
 accumulated mean, median(?)
 
@@ -1135,10 +1207,10 @@ accumulated mean, median(?)
 \subsection{Decision and regression Trees}
 
 \subsubsection{Tree walk with simple predicates (model.tree.simpleWalk)}
-% \libfcn{model.tree.simpleWalk}
+\libfcn{model.tree.simpleWalk}
 
 \subsubsection{Tree walk with user-defined predicates (model.tree.predicateWalk)}
-% \libfcn{model.tree.predicateWalk}
+\libfcn{model.tree.predicateWalk}
 
 \subsection{Cluster models}
 
